# adaptive-agent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  designlog.md  problem_specification.md  prompts.md  pyproject.toml
.agent_memory/: episodes__chat_246a0173__a5c7ef56__1769633658725.json  episodes__fx-impact-product-c-2024__2f8f8bde__1700000000000.json  episodes__revenue-product-a-q1-2023__55082f4d__1700000001000.json
data/: FUN_company_pl_actuals_dataset.csv  challenging_data.csv  employee_data.csv  order_data.csv  sales_data.csv
docs/: architecture.md  design-document.md  sandbox-design.md
results/challenging/: 20260120_190456_multi_session_raw.json  20260120_190456_multi_session_report.md
results/multi_session/: 20260120_132614_multi_session_raw.json  20260120_132614_multi_session_report.md  20260120_132835_multi_session_raw.json  20260120_132835_multi_session_report.md
results/multi_session_fixed/: 20260120_142211_multi_session_raw.json  20260120_142211_multi_session_report.md
results/multi_session_hard_fixed/: 20260120_144232_multi_session_raw.json  20260120_144232_multi_session_report.md
results/multi_session_hard_v2/: 20260120_180607_multi_session_raw.json  20260120_180607_multi_session_report.md
results/multi_session_hard_v3/: 20260120_181248_multi_session_raw.json  (+1 more)
scripts/: analyze_benchmark.py  chat.py  demo.py  demo_cogs_learning.py  demo_cross_session.py  demo_system.py  run_benchmark.py  run_learning_benchmark.py  run_matrix_benchmark.py  run_multi_session_benchmark.py  seed_demo.py
src/: __init__.py
tests/: __init__.py  conftest.py
(+134 files in other folders)
